Актив верхнего уровня

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                             <!-- aside -->
                             <aside class="menu">
                                 <a href="#" class="menu__item jsMenu">
-                                    <img src="images/icons/menu.png" alt="" class="menu__img">
+                                    <span class="sprite-menu"></span>
                                 </a>
                                 <a href="#slide2" class="menu__item">
-                                    <img src="images/icons/catalog.png" alt="" class="menu__img">
+                                    <span class="sprite-catalog"></span>
                                 </a>
                                 <a href="#slide3" class="menu__item">
-                                    <img src="images/icons/construct.png" alt="" class="menu__img">
+                                    <span class="sprite-construct"></span>
                                 </a>
                                 <a href="#slide4" class="menu__item">
-                                    <img src="images/icons/pin.png" alt="" class="menu__img">
+                                    <span class="sprite-pin"></span>
                                 </a>
                             </aside>
                             <!-- END aside -->
@@ -247,16 +247,16 @@
                             <!-- socials -->
                             <div class="socials">
                                 <a href="" class="socials__item">
-                                    <img src="images/icons/vk.png" alt="" class="socials__img">
+                                    <span class="sprite-vk"></span>
                                 </a>
                                 <a href="" class="socials__item">
-                                    <img src="images/icons/tw.png" alt="" class="socials__img">
+                                    <span class="sprite-tw"></span>
                                 </a>
                                 <a href="" class="socials__item">
-                                    <img src="images/icons/instagram.png" alt="" class="socials__img">
+                                    <span class="sprite-instagram"></span>
                                 </a>
                                 <a href="" class="socials__item">
-                                    <img src="images/icons/en.png" alt="" class="socials__img">
+                                    <span class="sprite-en"></span>
                                 </a>
 
                             </div>
@@ -265,13 +265,13 @@
                             <!-- mouse -->
                             <div class="mouse">
                                 <div class="mouse__prev">
-                                    <img src="images/icons/back.png" alt="">
+                                    <div class="sprite-back"></div>
                                 </div>
                                 <div class="mouse__img">
-                                    <img src="images/icons/mouse.png" alt="">
+                                    <div class="sprite-mouse"></div>
                                 </div>
                                 <div class="mouse__next">
-                                    <img src="images/icons/back-copy.png" alt="">
+                                    <div class="sprite-back-copy"></div>
                                 </div>
                             </div>
                             <!-- END mouse -->
