--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
                 <!-- aside -->
                 <aside class="menu">
                     <a href="#" class="menu__item jsMenu">
-                        <img src="images/icons/menu2.png" alt="" class="menu__img">
+                        <span class="sprite-menu2"></span>
                     </a>
                 </aside>
                 <!-- END aside -->
@@ -176,8 +176,8 @@
                                     Производитель
                                 </div>
                                 <div class="char__line"></div>
-                                <a href="" class="char__link">
-                                    Isopropyl meristate
+                                <a href="manufacturer.html" class="char__link">
+                                    Bloomage Freda Biopharm
                                 </a>
                             </div>
                             <div class="char">
