--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
                 <!-- aside -->
                 <aside class="menu">
                     <a href="#" class="menu__item jsMenu">
-                        <img src="images/icons/menu2.png" alt="" class="menu__img">
+                        <span class="sprite-menu2"></span>
                     </a>
                 </aside>
                 <!-- END aside -->
