Актив Нижних уровней, но пока не все

--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@
 
                                 <div class="catalog__item-link">
                                     Перейти
+                                    <svg class="catalog__item-svg" viewBox="0 0 75 18">
+                                        <use xlink:href="images/icons/sprite.svg#next"></use>
+                                    </svg>
                                 </div>
 
                             </div>
@@ -362,6 +365,9 @@
 
                                 <div class="catalog__item-link">
                                     Перейти
+                                    <svg class="catalog__item-svg" viewBox="0 0 75 18">
+                                        <use xlink:href="images/icons/sprite.svg#next"></use>
+                                    </svg>
                                 </div>
 
                             </div>
@@ -385,6 +391,9 @@
 
                                 <div class="catalog__item-link">
                                     Перейти
+                                    <svg class="catalog__item-svg" viewBox="0 0 75 18">
+                                        <use xlink:href="images/icons/sprite.svg#next"></use>
+                                    </svg>
                                 </div>
 
                             </div>
@@ -408,6 +417,9 @@
 
                                 <div class="catalog__item-link">
                                     Перейти
+                                    <svg class="catalog__item-svg" viewBox="0 0 75 18">
+                                        <use xlink:href="images/icons/sprite.svg#next"></use>
+                                    </svg>
                                 </div>
 
                             </div>
