--- a/product.html
+++ b/product.html
@@ -200,7 +200,10 @@
                                     Применение:
                                 </div>
                                 <button class="app__more">
-                                    Показать все категории
+                                    <span class="app__more-text">Показать все категории</span>
+                                    <svg class="app__more-svg" viewBox="0 0 477.175 477.175">
+                                        <use xlink:href="images/icons/sprite.svg#back"></use>
+                                    </svg>
                                 </button>
                             </div>
 
@@ -217,8 +220,37 @@
                                     <img src="images/content/apps/app3.png" alt="" class="app__img">
                                     Детская <br> косметика
                                 </div>
-
+                                <div class="app__list-hidden">
+                                    <div class="app__list">
+                                        <div class="app__item">
+                                            <img src="images/content/apps/app1.png" alt="" class="app__img">
+                                            Декоративная <br> косметика
+                                        </div>
+                                        <div class="app__item">
+                                            <img src="images/content/apps/app2.png" alt="" class="app__img">
+                                            Краски <br> для волос
+                                        </div>
+                                        <div class="app__item">
+                                            <img src="images/content/apps/app3.png" alt="" class="app__img">
+                                            Детская <br> косметика
+                                        </div>
+                                        <div class="app__item">
+                                            <img src="images/content/apps/app1.png" alt="" class="app__img">
+                                            Декоративная <br> косметика
+                                        </div>
+                                        <div class="app__item">
+                                            <img src="images/content/apps/app2.png" alt="" class="app__img">
+                                            Краски <br> для волос
+                                        </div>
+                                        <div class="app__item">
+                                            <img src="images/content/apps/app3.png" alt="" class="app__img">
+                                            Детская <br> косметика
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+
+
                         </div>
                         <!-- END app -->
 
@@ -230,7 +262,6 @@
                             </svg>
                         </button>
                         <!-- END add -->
-
 
 
                     </div>
