Добавил внутренние страницы: Карьера, Новости, О нас, отзывы, Спецпредложения

--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
 
                             <!-- socials -->
                             <div class="socials">
-                                <a href="" class="socials__item">
+                                <a target="_blank" href="" class="socials__item">
                                     <span class="sprite-vk"></span>
                                 </a>
-                                <a href="" class="socials__item">
+                                <a target="_blank" href="" class="socials__item">
                                     <span class="sprite-tw"></span>
                                 </a>
-                                <a href="" class="socials__item">
+                                <a target="_blank" href="" class="socials__item">
                                     <span class="sprite-instagram"></span>
                                 </a>
                                 <a href="" class="socials__item">
@@ -290,7 +290,7 @@
                                 <!-- aside -->
                                 <aside class="menu">
                                     <a href="#" class="menu__item jsMenu">
-                                        <img src="images/icons/menu.png" alt="" class="menu__img">
+                                        <span class="sprite-menu"></span>
                                     </a>
                                 </aside>
                                 <!-- END aside -->
@@ -437,7 +437,7 @@
                                 <!-- aside -->
                                 <aside class="menu">
                                     <a href="#" class="menu__item jsMenu">
-                                        <img src="images/icons/menu.png" alt="" class="menu__img">
+                                        <span class="sprite-menu"></span>
                                     </a>
                                 </aside>
                                 <!-- END aside -->
@@ -547,7 +547,7 @@
                                 <!-- aside -->
                                 <aside class="menu">
                                     <a href="#" class="menu__item jsMenu">
-                                        <img src="images/icons/menu.png" alt="" class="menu__img">
+                                        <span class="sprite-menu"></span>
                                     </a>
                                 </aside>
                                 <!-- END aside -->
