--- a/slides/catalog.html
+++ b/slides/catalog.html
@@ -32,7 +32,7 @@
                 <!-- aside -->
                 <aside class="menu">
                     <a href="#" class="menu__item jsMenu">
-                        <img src="images/icons/menu.png" alt="" class="menu__img">
+                        <span class="sprite-menu"></span>
                     </a>
                 </aside>
                 <!-- END aside -->
