Обновил ссылки в менюшках

--- a/index.html
+++ b/index.html
@@ -794,31 +794,31 @@
         </button>
         <hr class="hmenu__hr">
         <div class="hmenu__list">
-            <a href="#slide1" class="hmenu__item">
+            <a href="index.html#slide1" class="hmenu__item jsSwiper" data-index="0">
                 Главная
             </a>
-            <a href="#slide2" class="hmenu__item">
+            <a href="/index.html#slide2" class="hmenu__item jsSwiper" data-index="1">
                 Каталог
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="news.html" class="hmenu__item">
                 Новости
             </a>
             <a href="/" class="hmenu__item">
                 Статьи и рецептуры
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="career.html" class="hmenu__item">
                 Карьера
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="about.html" class="hmenu__item">
                 О компании
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="reviews.html" class="hmenu__item">
                 Отзывы
             </a>
             <a href="/" class="hmenu__item">
                 Наши Лица
             </a>
-            <a href="#slide4" class="hmenu__item jsSwiper" data-index="3">
+            <a href="/index.html#slide4" class="hmenu__item jsSwiper" data-index="3">
                 Контакты
             </a>
             <a href="/" class="hmenu__item">
