--- a/ingredients.html
+++ b/ingredients.html
@@ -415,19 +415,19 @@
                             <a href="/index.html#slide1" class="footer__item">
                                 Главная
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="news.html" class="footer__item">
                                 Новости
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="/" class="footer__item">
                                 Статьи и рецептуры
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="career.html" class="footer__item">
                                 Карьера
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="about.html" class="footer__item">
                                 О компании
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="/" class="footer__item">
                                 Наши лица
                             </a>
                             <a href="/index.html#slide4" class="footer__item">
@@ -444,22 +444,22 @@
                             <a href="/index.html#slide2" class="footer__item">
                                 Каталог
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="specoffer.html" class="footer__item">
                                 Специальные предложения
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="ingredients.html" class="footer__item">
                                 Поиск по сырью
                             </a>
                             <a href="" class="footer__item">
                                 Поиск по применению
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="products.html" class="footer__item">
                                 Производители
                             </a>
                             <a href="/index.html#slide3" class="footer__item">
                                 Конструктор
                             </a>
-                            <a href="" class="footer__item">
+                            <a href="/" class="footer__item">
                                 R&D центр
                             </a>
 
@@ -568,19 +568,19 @@
             <a href="/index.html#slide2" class="hmenu__item jsSwiper" data-index="1">
                 Каталог
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="news.html" class="hmenu__item">
                 Новости
             </a>
             <a href="/" class="hmenu__item">
                 Статьи и рецептуры
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="career.html" class="hmenu__item">
                 Карьера
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="about.html" class="hmenu__item">
                 О компании
             </a>
-            <a href="/" class="hmenu__item">
+            <a href="reviews.html" class="hmenu__item">
                 Отзывы
             </a>
             <a href="/" class="hmenu__item">
