--- a/about.html
+++ b/about.html
@@ -89,10 +89,14 @@
                         Мы гордимся своей историей
                     </h3>
                     <div class="text">
-                        Равным образом реализация намеченных плановых заданий играет важную роль в формировании форм
-                        развития. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры
-                        способствует подготовки и реализации направлений
-                        прогрессивного развития.
+                        <div class="row">
+                            <div class="text__left">
+                                Равным образом реализация намеченных плановых заданий играет важную роль в формировании форм
+                                развития. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры
+                                способствует подготовки и реализации направлений
+                                прогрессивного развития.
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- END desc -->
@@ -110,9 +114,9 @@
             <div class="container-small">
                 <!-- content -->
                 <div class="about__content content">
-                    <h3>
+                    <h2>
                         История компании
-                    </h3>
+                    </h2>
                     <p>
                         Компания начала свою деятельность в 1994 году как дистрибьютор Henkel KgaA . Само название Руссо
                         Хеми появилось в 2000 году, когда компания начала активное освоение всего спектра ингредиентов
