--- a/specoffer.html
+++ b/specoffer.html
@@ -64,7 +64,6 @@
                 </div>
                 <!-- END controls -->
 
-
                 <!-- breadcrumbs -->
                 <div class="breads">
                     <a href="/index.html#slide1" class="bread">
@@ -75,6 +74,7 @@
                     </span>
                 </div>
                 <!-- END breadcrumbs -->
+
 
                 <!-- desc -->
                 <div class="desc">
@@ -89,10 +89,16 @@
                         Мы создаем лучшие условия для вас
                     </h3>
                     <div class="text">
-                        Равным образом реализация намеченных плановых заданий играет важную роль в формировании форм
-                        развития. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры
-                        способствует подготовки и реализации направлений
-                        прогрессивного развития.
+                        <div class="row">
+                            <div class="text__left">
+                                Равным образом реализация намеченных плановых заданий играет важную роль в формировании
+                                форм
+                                развития. Значимость этих проблем настолько очевидна, что укрепление и развитие
+                                структуры
+                                способствует подготовки и реализации направлений
+                                прогрессивного развития.
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- END desc -->
